Get image thumbnail.

--- a/Makefile.am
+++ b/Makefile.am
@@ -60,6 +60,9 @@ builtin_sources += plugins/imglisting.c plugins/imglisting.h
 builtin_modules += imgimgpull
 builtin_sources += plugins/imgimgpull.c plugins/imgimgpull.h
 
+builtin_modules += imgthmpull
+builtin_sources += plugins/imgthmpull.c plugins/imgthmpull.h
+
 if NOKIA_PCSUITE
 builtin_modules += pcsuite
 builtin_sources += plugins/pcsuite.c
