Image arch: add image_arch.h to Makefile.am

--- a/Makefile.am
+++ b/Makefile.am
@@ -109,7 +109,7 @@ builtin_modules += remote_camera
 builtin_sources += plugins/remote_camera.c plugins/remote_camera.h
 
 builtin_modules += image_arch
-builtin_sources += plugins/image_arch.c
+builtin_sources += plugins/image_arch.c plugins/image_arch.h
 
 builtin_modules += image_pull
 builtin_sources += plugins/image_pull.c
