--- a/Makefile.am
+++ b/Makefile.am
@@ -99,6 +99,9 @@ builtin_sources += plugins/irmc.c
 builtin_modules += image_push
 builtin_sources += plugins/image_push.c
 
+builtin_modules += remote_display
+builtin_sources += plugins/remote_display.c
+
 builtin_modules += image_arch
 builtin_sources += plugins/image_arch.c
 
