--- a/Makefile.am
+++ b/Makefile.am
@@ -122,6 +122,7 @@ client_obex_client_SOURCES = $(gdbus_sources) $(gobex_sources) \
 				client/ftp.h client/ftp.c \
 				client/opp.h client/opp.c \
 				client/map.h client/map.c \
+				client/bip_push.h client/bip_push.c \
 				client/transfer.h client/transfer.c \
 				client/agent.h client/agent.c \
 				client/driver.h client/driver.c \
